Fix image height on mobile/tablet

--- a/src/stylesheets/module/_project.scss
+++ b/src/stylesheets/module/_project.scss
@@ -4,7 +4,7 @@
     grid-column-gap: 30px;
     grid-row-gap: 56px;
 
-    @include respond-to(small) {
+    @include respond-to(medium) {
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -67,12 +67,12 @@
 }
 
 .project-image {
-    height: 280px;
+    height: 240px;
     overflow-x: scroll;
     padding-left: 24px;
 
     @include respond-to(small) {
-        height: 460px;
+        height: 330px;
     }
 
     @include respond-to(medium) {
